# CoinBill

./: .gitignore  CMakeLists.txt  README.md
cmake/: CoinBill-Lib.cmake
docs/: From_basic_trading_to_coin_English.docx  From_basic_trading_to_coin_Japan_last.docx  From_basic_trading_to_coin_Korean.docx  From_basic_trading_to_coin_china_last.docx
include/Network/: Host.h  NetCallback.h  NetHost.h  Packet.h  Socket.h  SocketFuncBinding.h  SocketPasses.h
include/Support/: Basic.h  BigInt.h  Cryption.h  Logger.h  MemPool.h  Types.h
include/User/: Block.h  Blockv1.h  Host.h  HostCallback.h  Transaction.h  Wallet.h
lib/: CoinBill.cpp
lib/Network/: CMakeLists.txt  Socket.cpp  SocketFuncBinding.cpp
lib/Support/: CMakeLists.txt  Cryption.cpp
lib/User/: Blockv1.cpp  CMakeLists.txt  Host.cpp  HostCallback.cpp  Transaction.cpp  Wallet.cpp
